tests/parser/parse-when.2.bad.error
error: Malformed function
  --> test:4:18
   |
 4 |  (define x (when 1))
   |                   ^ expected body
